--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,8 @@ jobs:
           on:
             tags: true
             branch: master
+      after_deploy:
+        - ./scripts/after_deploy.sh "bumper" tag $JENKINS_TOKEN
     # publish canary package if on master
     - stage: Release canary
       if: (branch = master) AND (type != pull_request) AND commit_message !~ /^chore\(release\)/
