--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@playkit-js/playkit-js": "0.50.0-canary.add5823",
+    "@playkit-js/playkit-js": "0.59.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
@@ -74,7 +74,7 @@
     "webpack-dev-server": "latest"
   },
   "peerDependencies": {
-    "@playkit-js/playkit-js": "0.50.0-canary.add5823"
+    "@playkit-js/playkit-js": "0.59.2"
   },
   "repository": {
     "type": "git",
