--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-plugin-istanbul": "^6.0.0",
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^4.0.0",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^4.0.2",
@@ -78,6 +79,7 @@
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
     "standard-version": "^8.0.2",
+    "style-loader": "^1.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
