--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^6.0.0",
     "chai": "^4.2.0",
+    "conventional-github-releaser": "3.1.3",
     "cross-env": "^7.0.2",
     "css-loader": "^4.0.0",
     "eslint": "^7.4.0",
