--- a/.flowconfig
+++ b/.flowconfig
@@ -1,7 +1,13 @@
 [ignore]
-.*/node_modules
+.*/node_modules/
+<PROJECT_ROOT>/src/assets
 [include]
 [libs]
+./src/index.js
+./src/bumper.js
+./src/bumper-ads-controller.js
+./src/bumper-engine-decorator.js
+./src/bumper-middleware.js
 node_modules/@playkit-js/playkit-js/flow-typed/
-node_modules/kaltura-player-js/flow-typed/
+node_modules/@playkit-js/kaltura-player-js/flow-typed/
 [options]
