--- a/.flowconfig
+++ b/.flowconfig
@@ -11,3 +11,4 @@
 node_modules/@playkit-js/playkit-js/flow-typed/
 node_modules/@playkit-js/kaltura-player-js/flow-typed/
 [options]
+esproposal.optional_chaining=enable
