--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "flow-bin": "^0.129.0",
     "husky": "^4.2.5",
     "istanbul": "^0.4.5",
-    "@playkit-js/kaltura-player-js": "^3.17.25",
+    "@playkit-js/kaltura-player-js": "3.17.25",
     "karma": "^5.1.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -106,8 +106,7 @@
   },
   "peerDependencies": {
     "@playkit-js/playkit-js": "latest",
-    "@playkit-js/playkit-js-providers": "latest",
-    "@playkit-js/kaltura-player-js": "^3.17.25"
+    "@playkit-js/kaltura-player-js": "3.17.25"
   },
   "dependencies": {
     "fast-xml-parser": "^4.5.1"
